[workspace]
members = [
    "substreams-macro",
    "substreams",
]

[workspace.package]
version = "0.5.16"
description = "Substreams SDK - A streaming data engine for The Graph - by StreamingFast"
edition = "2018"
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-rs"
license = "Apache-2.0"
readme = "./README.md"
keywords = [ "substreams", "streamingfast", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[workspace.dependencies]
substreams-macro = { version = "0.5.16", path = "./substreams-macro" }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"