[package]
name = "substreams-macro"
version.workspace = true
description = "Substream's proc macros."
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true
doc = false

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "1.0.95", features = ["full", "visit-mut", "fold", "extra-traits"] }
thiserror = "1.0"
