[package]
name = "substreams"
version = "0.1.0"
description = "Substreams SDK - A streaming data engine for The Graph - by StreamingFast"
edition = "2018"
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-rs"
license = "Apache-2.0"
readme = "../README.md"
keywords = [ "substreams", "streamingfast", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[dependencies]
substreams-macro = { version = "~0.1.0", path = "../substreams-macro" }
prost = "^0.11.0"
prost-types = "^0.11.0"
hex = "0.4.3"
hex-literal = "0.3.4"
num-bigint = "0.4"
bigdecimal = "0.3"
thiserror = "1.0"
wee_alloc = "0.4.5"
num-traits = "0.2.15"
pad = "0.1"

[build-dependencies]
prost-build = "^0.11.0"
