[package]
name = "substreams"
version = "0.5.6"
description = "Substreams SDK - A streaming data engine for The Graph - by StreamingFast"
edition = "2018"
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-rs"
license = "Apache-2.0"
readme = "../README.md"
keywords = [ "substreams", "streamingfast", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[dependencies]
anyhow = "1"
bigdecimal = "0.3"
hex = "0.4"
hex-literal = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
pad = "0.1"
prost = "0.11"
prost-types = "0.11"
substreams-macro = { version = "0.5.6", path = "../substreams-macro" }
thiserror = "1"

[build-dependencies]
prost-build = "0.11"
