[package]
name = "substreams"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
bigdecimal = "0.3"
hex = "0.4"
hex-literal = "0.3"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1.45"
pad = "0.1"
prost = "0.13.3"
prost-types = "0.13.3"
substreams-macro = { workspace = true }
thiserror = "1"
pest= "2.7.10"
pest_derive = "2.7.10"

[dev-dependencies]
rstest = "0.19.0" 

[build-dependencies]
prost-build = "0.13.3"
